2004-10-18  Sushma Rai  <rsushma@novell.com>

	* configure.in: version 2.1.0

2004-10-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* camel/camel-exchange-provider.c: (camel_provider_module_init):
	Initialize codeset here too.

2004-10-13  Sarfraaz Ahmed <asarfraaz@novell.com>

	* lib/e2k-propnames.h.in : Added a new mapi proptag for folder size.
	* storage/e-folder-exchange.c (e_folder_exchange_get_folder_size)
	(e_folder_exchange_set_folder_size): Implemented
	(e_folder_exchange_save_to_file) (e_folder_exchange_new_from_file):
	Now take care of the folder size as well
	* storage/e-folder-exchange.h: Similar
	* storage/exchange-account.c (exchange_account_connect): Check
	for quota information.
	* storage/exchange-hierarchy-webdav.c (hierarchy_new_folder) (add_href)
	: Add check for some warnings.
	(exchange_hierarchy_webdav_parse_folder): Set the folder size for the
	folder
	* storage/xc-commands.c (do_folder_size): Implementated
	* storage/ximian-connector.xml: Added the verb for folder size

2004-10-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/main.c: (main):
	* storage/ximian-connector-setup.c: (main):
        Initialize codeset for textdomain. Patch by Frederic Crozat.

2004-10-08  Sarfraaz Ahmed <asarfraaz@novell.com>

        * calendar/e-cal-backend-exchange-calendar.c (book_resource): Make
        connector actually create the meeting for the resource without
        sending a mail.
        (send_objects): Send the proper users list back to the client.
        (modify_object_with_href): This now enables to send a meeting for
        a specific href. This fixes #67510

2004-10-08  Sushma Rai  <rsushma@novell.com>
	
	* camel/camel-exchange-folder.c: Include camel-i18n.h

	* camel/camel-exchange-store.c: ditto

	* camel/camel-exchange-transport.c: ditto

	* camel/camel-stub.c: ditto

2004-10-05  Sushma Rai  <rsushma@novell.com>

	* storage/main.c (setup_addressbook_factory): Registering
	GAL backend.
