@@ -121,6 +121,13 @@ names]" is an optional space-separated list of property names to
 fetch. (If you don't specify any properties, it fetches all
 properties.)
 
+Example :
+---------
+Exchange server : nld-exchange.blr.novell.com
+Exchange mail-id : surf@blr.novell.com
+
+./gctest surf@nld-exchange.blr.novell.com surf@blr.novell.com
+
 
 davcat
 ------
