@@ -1,3 +1,9 @@
+2004-10-18  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* lib/Makefile.am: Reorder the LDAP_LIBS
+	* storage/Makefile.am: Similar
+	* docs/debug : Added an example for gctest
+
 2004-10-18  Sushma Rai  <rsushma@novell.com>
 
 	* configure.in: version 2.1.0
